--- a/app_general/templates/app_general/home.html
+++ b/app_general/templates/app_general/home.html
@@ -18,15 +18,15 @@
         <h4 class="content-title text-center">Why ArtGameStore ❓❓❓</h4>
         <div class="grid grid-3" >
             <div>
-                <img class="image-block img-homepage" src="{% static 'app_general/devil.jpg' %}" alt="">
+                <img class="image-block img-homepage" src="{% static 'app_general/home3.png' %}" alt="">
                 <p class="text-center">Because game is not just a game.</p>
             </div>
             <div>
-                <img class="image-block img-homepage" src="{% static 'app_general/devil.jpg' %}" alt="">
+                <img class="image-block img-homepage" src="{% static 'app_general/home2.jfif' %}" alt="">
                 <p class="text-center">Because we want you to have fun.</p>
             </div>
             <div>
-                <img class="image-block img-homepage" src="{% static 'app_general/devil.jpg' %}" alt="">
+                <img class="image-block img-homepage" src="{% static 'app_general/home1.jpg' %}" alt="">
                 <p class="text-center">Because your fun is our happiness.</p>
             </div>
         </div>
