--- a/app_gamelist/templates/app_gamelist/game.html
+++ b/app_gamelist/templates/app_gamelist/game.html
@@ -11,6 +11,7 @@
             <img class="image-block" src="{% static game.image_relative_url %}" alt="">
             <div>
                 <h1 class="text-center game-title">{{game.title}}</h1>
+                <h3 class="text-center">Genre : {{game.genre}} </h3>
                 <h3 class="text-center">Price : {{ game.price|floatformat:'g' }} USD</h3>
                 <h3 class="text-center">Release Year : {{game.initial_release|date:'Y'}}</h3>
 
