--- a/app_general/templates/app_general/about.html
+++ b/app_general/templates/app_general/about.html
@@ -6,31 +6,19 @@
 <section class="content-section content-section-single">
     <div class="content-container">
         <h2 class="content-title">About ArtGameStore</h2>
-        <h4>Established 2023</h4>
-        <p>Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Voluptate vero
-            perferendis accusamus maiores
-            sapiente fugiat et. Assumenda
-            cumque cupiditate dicta, possimus
-            aliquam eum obcaecati deserunt beatae
-            reprehenderit tempore laborum officiis.</p>
-        <h4>We choose only best game</h4>
-        <p>Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Voluptate vero
-            perferendis accusamus maiores
-            sapiente fugiat et. Assumenda
-            cumque cupiditate dicta, possimus
-            aliquam eum obcaecati deserunt beatae
-            reprehenderit tempore laborum officiis.</p>
-        <h4>Story of our path</h4>
-        <p>Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Voluptate vero
-            perferendis accusamus maiores
-            sapiente fugiat et. Assumenda
-            cumque cupiditate dicta, possimus
-            aliquam eum obcaecati deserunt beatae
-            reprehenderit tempore laborum officiis.</p>
-        
+        <h4>What is ArtGameStore?</h4>
+        <p>ArtGameStore is your ultimate destination for all things gaming. Whether you're a seasoned gamer or just starting out, we provide a wide range of gaming products and services to cater to your every need. From the latest AAA titles to classic gems, hardware, accessories, and collectibles, we've got you covered.</p>
+        <h4>Established in 2023</h4>
+        <p>ArtGameStore was founded in 2023 with a vision to create a haven for gamers, by gamers. Our team is passionate about gaming and committed to delivering an unparalleled shopping experience for our customers.</p>
+        <h4>Customer Experience</h4>
+        <p>At ArtGameStore, customer satisfaction is our top priority. We strive to provide a seamless and enjoyable shopping experience from start to finish. Our knowledgeable staff are always on hand to assist you with any questions or concerns you may have, ensuring that you find exactly what you're looking for.</p>
+        <h4>Quality and Service Assurance</h4>
+        <p>We stand behind the quality of our products and the excellence of our service. From product selection to shipping and after-sales support, we adhere to the highest standards to ensure that you receive only the best.</p>
+        <h4>Privacy Policy</h4>
+        <p>Protecting your privacy is important to us. Our privacy policy outlines how we collect, use, and protect your personal information, ensuring that your data is safe and secure when you shop with us.
+        </p>
+        <h4>About dev</h4>
+        <p>Hello, I'm Kandanai Art Ketkaew, a 21-year-old university student currently pursuing a degree in Software Engineering at Thammasat University (TU). As an gamer myself, I founded ArtGameStore with a simple goal which is to create a platform that delivers exceptional experiences to fellow gaming enthusiasts.</p>
     </div>
 
 </section>
