--- a/app_general/templates/app_general/register_thankyou.html
+++ b/app_general/templates/app_general/register_thankyou.html
@@ -5,22 +5,17 @@
 {%block content%}
 <section class="content-section content-section-single">
     <div class="content-container content-container-narrow">
-        <h2 class="content-title">Thank you for register</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores explicabo eveniet sunt iure! Eligendi iure
-            voluptatibus nesciunt autem ipsa laboriosam repellat! Iusto, dicta provident laborum fugit voluptatibus
-            facere ratione sunt, iure, fugiat suscipit repudiandae porro iste earum beatae? Dolorem quos id culpa in
-            suscipit excepturi, mollitia inventore, nobis sequi debitis asperiores quia eius odio. Ipsam, distinctio,
-            laudantium aspernatur alias voluptatem quaerat debitis placeat, ut fuga blanditiis earum voluptatum aperiam?
-            Hic est aut architecto ut blanditiis alias quo ad labore maxime eos neque veniam totam optio repellat enim
-            soluta consectetur, aperiam distinctio ipsum. Suscipit, laborum nobis? Id obcaecati molestiae perferendis
-            laboriosam quas necessitatibus ad nobis minima? Voluptatum excepturi ab libero neque ad est ea totam
-            dolorem, quia expedita, consectetur modi atque aut voluptas sapiente rerum, ipsa veniam repellendus dolorum
-            eveniet illum. Tempore animi deserunt dignissimos voluptas odio eaque consectetur veritatis corrupti velit
-            vitae eum aspernatur error maxime repudiandae magnam, facere quas?
-        </p>
-        <a class="button button-primary" href="{% url 'homepage'%}">Back to Home</a>
+        <h1 class="content-title text-center" style="margin-top: 60px;">Thank you for register
+</h1>
+        <h3 class="text-center">
+            We're thrilled to have you join our gaming community. Your registration is complete, and you're now part of
+            an exciting world of gaming enthusiasts. Should you have any questions or need assistance, feel free to reach out to our support team. We're here to
+            ensure that you have the best possible experience with us.
 
+            Happy gaming!
+        </h3>
+        <p class="text-center"><a class="button button-primary " href="{% url 'homepage'%}">Back to Home</a>
+        </p>
     </div>
 
 </section>
