--- a/app_user/templates/registration/login.html
+++ b/app_user/templates/registration/login.html
@@ -1,19 +1,41 @@
 {%extends 'app_general/components/base.html'%}
 
-{% block site_title %}Sign-in | {% endblock %}
+{% block site_title %}Log in | {% endblock %}
 
 {%block content%}
 <section class="content-section content-section-single">
-    <div class="content-container">
-        <h2 class="content-title">Sign-in</h2>
+    <div class="content-container content-container-narrow">
+        <h2 class="content-title text-center" style="margin-top: 50px;">Log in</h2>
         <form action="{% url 'login' %}" method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <p>
+            {% if request.GET.next %}
+            <input type="hidden" name="next" value="{{ request.GET.next }}">
+
+            {% endif %}
+            <p class="text-center">
                 <button class="button button-primary" type="submit">Login</button>
+            </p>
+            <p class="text-center">
+                <a href="{% url 'createacc' %}">Create Account</a>
             </p>
         </form>
     </div>
 
 </section>
+<style>
+    input[type="password"],
+    input[type="text"] {
+        width: calc(100% - 20px); 
+        box-sizing: border-box;
+        margin-bottom: 0px; 
+        padding: 8px; 
+        border: 1px solid #ccc; 
+        border-radius: 5px; 
+        outline: none; 
+    }
+    
+</style>
+
+
 {% endblock %}
