--- a/app_general/templates/app_general/components/site_header.html
+++ b/app_general/templates/app_general/components/site_header.html
@@ -11,7 +11,7 @@
         <span>About us</span>
     </a>
     {% if user.is_authenticated %}
-        <a class="site-header-item" href="{% url 'dashboard' %}">
+        <a class="site-header-item" href="{% url 'profile' %}">
             <span>{{ user.username }}</span>
         </a>
         <form class="site-header-item" action="{% url 'logout' %}" method="post">
