--- a/app_general/templates/app_general/components/site_header.html
+++ b/app_general/templates/app_general/components/site_header.html
@@ -26,4 +26,11 @@
             <span>Create Account</span>
         </a>
     {% endif %}
+    
+    {% if user.is_authenticated %}
+    <a class="site-header-item" href="{% url 'cart' %}" style="margin-left: auto;">
+        <img src="{% static 'app_general/cart.png' %}" alt="Cart" style="width: 40px; height: 40px;">
+    </a>
+{% endif %}
+
 </header>
